--- a/Karmyogi.Data/Karmyogi.Data.csproj
+++ b/Karmyogi.Data/Karmyogi.Data.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\State.cs" />
     <Compile Include="Models\UserDeleted.cs" />
+    <Compile Include="Models\ViewedProfile.cs" />
     <Compile Include="Models\Weight.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\SearchModel.cs" />
